fix: fixes the text overflow issues in trending section

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -16,6 +16,12 @@ body {
     -webkit-box-orient: vertical;
     overflow: hidden;
   }
+  .line-clamp-4 {
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
 }
 
 @layer base {
